@@ -1,7 +1,5 @@
 package animores.serverapi.diary.service.impl;
 
-import static animores.serverapi.common.S3Path.DIARY_PATH;
-
 import animores.serverapi.account.domain.Account;
 import animores.serverapi.common.exception.CustomException;
 import animores.serverapi.common.exception.ExceptionCode;
@@ -9,40 +7,30 @@ import animores.serverapi.common.service.AuthorizationService;
 import animores.serverapi.common.service.S3Service;
 import animores.serverapi.diary.dao.GetAllDiaryDao;
 import animores.serverapi.diary.dao.GetCalendarDiaryDao;
-import animores.serverapi.diary.dto.AddDiaryLikeRequest;
-import animores.serverapi.diary.dto.AddDiaryMediaRequest;
-import animores.serverapi.diary.dto.AddDiaryRequest;
-import animores.serverapi.diary.dto.CancelDiaryLikeRequest;
-import animores.serverapi.diary.dto.EditDiaryContentRequest;
-import animores.serverapi.diary.dto.EditDiaryMediaRequest;
-import animores.serverapi.diary.dto.GetAllDiaryResponse;
-import animores.serverapi.diary.dto.GetCalendarDiaryResponse;
-import animores.serverapi.diary.dto.RemoveDiaryRequest;
+import animores.serverapi.diary.dto.*;
 import animores.serverapi.diary.entity.Diary;
 import animores.serverapi.diary.entity.DiaryLike;
 import animores.serverapi.diary.entity.DiaryMedia;
 import animores.serverapi.diary.entity.DiaryMediaType;
-import animores.serverapi.diary.repository.DiaryCustomRepository;
-import animores.serverapi.diary.repository.DiaryLikeRepository;
-import animores.serverapi.diary.repository.DiaryMediaCustomRepository;
-import animores.serverapi.diary.repository.DiaryMediaRepository;
-import animores.serverapi.diary.repository.DiaryRepository;
+import animores.serverapi.diary.repository.*;
 import animores.serverapi.diary.service.DiaryService;
 import animores.serverapi.profile.domain.Profile;
 import animores.serverapi.profile.repository.ProfileRepository;
 import com.querydsl.core.QueryResults;
-import java.io.IOException;
-import java.time.LocalDate;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import software.amazon.awssdk.services.s3.model.ObjectIdentifier;
-import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+
+import java.io.IOException;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.UUID;
+import java.util.stream.IntStream;
+
+import static animores.serverapi.common.S3Path.DIARY_PATH;
 
 @Service
 @RequiredArgsConstructor
@@ -96,9 +84,12 @@ public class DiaryServiceImpl implements DiaryService {
         Diary diary = diaryRepository.save(Diary.create(account, profile, request.content()));
 
         if (files != null) {
-            List<PutObjectRequest> putObjectRequests = s3Service.uploadFilesToS3(files, DIARY_PATH);
+            List<String> fileNames = files.stream()
+                .map(file -> UUID.randomUUID().toString())
+                .toList();
 
-            List<DiaryMedia> diaryMedias = createDiaryMedias(diary, putObjectRequests);
+            s3Service.uploadFilesToS3(files, DIARY_PATH, fileNames);
+            List<DiaryMedia> diaryMedias = createDiaryMedias(diary, fileNames, files);
             diaryMediaRepository.saveAll(diaryMedias);
         }
 
@@ -126,10 +117,11 @@ public class DiaryServiceImpl implements DiaryService {
         authorizationService.validateProfileAccess(account, profile);
         authorizationService.validateDiaryAccess(diary, profile);
 
-        List<PutObjectRequest> putObjectRequests = s3Service.uploadFilesToS3(files, DIARY_PATH);
-
-        diaryMediaRepository.saveAll(createDiaryMedias(diary, putObjectRequests));
-
+        List<String> fileNames = files.stream()
+            .map(file -> UUID.randomUUID().toString())
+            .toList();
+        s3Service.uploadFilesToS3(files, DIARY_PATH, fileNames);
+        diaryMediaRepository.saveAll(createDiaryMedias(diary, fileNames, files));
         reorderDiaryMedia(diary.getId(), DiaryMediaType.I);
     }
 
@@ -150,9 +142,12 @@ public class DiaryServiceImpl implements DiaryService {
         s3Service.removeFilesFromS3(generateKeysForS3Deletion(mediaListToDelete));
         diaryMediaRepository.deleteAll(mediaListToDelete);
 
-        List<PutObjectRequest> putObjectRequests = s3Service.uploadFilesToS3(files, DIARY_PATH);
-        diaryMediaRepository.saveAll(createDiaryMedias(diary, putObjectRequests));
+        List<String> fileNames = files.stream()
+            .map(file -> UUID.randomUUID().toString())
+            .toList();
 
+        s3Service.uploadFilesToS3(files, DIARY_PATH, fileNames);
+        diaryMediaRepository.saveAll(createDiaryMedias(diary, fileNames, files));
         reorderDiaryMedia(diary.getId(), DiaryMediaType.I);
     }
 
@@ -224,13 +219,11 @@ public class DiaryServiceImpl implements DiaryService {
     }
 
     private List<DiaryMedia> createDiaryMedias(Diary diary,
-        List<PutObjectRequest> putObjectRequests) {
-        return IntStream.range(0, putObjectRequests.size())
-            .mapToObj(i -> {
-                return DiaryMedia.create(diary, putObjectRequests.get(i).key(), i,
-                    DiaryMediaType.checkType(putObjectRequests.get(i).contentType()));
-            })
-            .collect(Collectors.toList());
+        List<String> fileNames, List<MultipartFile> fileList) {
+        return IntStream.range(0, fileNames.size())
+            .mapToObj(i -> DiaryMedia.create(diary, DIARY_PATH + fileNames.get(i), i,
+                    DiaryMediaType.checkType(fileList.get(i).getContentType()))
+            ).toList();
     }
 
     public void reorderDiaryMedia(Long diaryId, DiaryMediaType type) {
@@ -247,6 +240,6 @@ public class DiaryServiceImpl implements DiaryService {
             .map(media -> ObjectIdentifier.builder()
                 .key(media.getUrl())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
